# projeto-ads-clinica-vida

./: pyproject.toml
docs/: Relatório-Projeto-Parcial.md  pseudocodigo.md  relatorio-sprint1.md  relatorio-sprint3.md  relatorio-srprint2.md
src/: app.py
