[tool.poetry]
name = "projeto-ads"
version = "0.1.0"
description = "Projeto integrado de Análise e Desenvolvimento de Sistemas"
authors = ["Lucas Yudy <lucas.ok2511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
